# pptx-generator

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  schemas.py
app/services/: __init__.py  pptx_generator.py  session_manager.py  template_analyzer.py  template_manager.py
docs/: dify_prompt_template.md
pptx_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
